--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ h2 {
   right: 19px;
 }
 
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
 /* layout når den er stor */
 @media (min-width: 601px) {
   .h1_section {
@@ -118,5 +124,24 @@ h2 {
     position: absolute;
     top: 650px;
     right: 250px;
+  }
+
+  .mig_picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+
+  .lulu_picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+
+  .two_columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
