--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ img {
   width: 100%;
   display: block;
   object-fit: cover;
+  align-self: stretch;
 }
 
 .h1_mig {
@@ -209,8 +210,45 @@ p {
   p {
     margin-top: 2rem;
   }
+
+  .column1 {
+    border-right: 2px solid #efbcd5;
+  }
 }
 
-.column1 {
-  border-right: 2px solid #efbcd5;
+/**************PORTFOLIO SIDER *****************/
+
+.grid_4col_1-1-1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  margin-top: 50px;
+  margin-right: 150px;
+  margin-left: 150px;
+  margin-bottom: 100px;
+}
+
+.image1 {
+  grid-column: 1/2 span;
+  grid-row: 1/2 span;
+}
+
+.image2 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.image4 {
+  grid-column: 3/2 span;
+  grid-row: 2;
+}
+
+.portfolie_h1 {
+  font-family: marshmallow-fluff, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #eb6424;
+  text-align: center;
+  font-size: 5rem;
+  margin-top: 5rem;
 }
