--- a/style.css
+++ b/style.css
@@ -91,6 +91,38 @@ p {
   color: #faa830;
 }
 
+.portfolie_h1 {
+  font-family: marshmallow-fluff, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #eb6424;
+  text-align: center;
+  font-size: 5rem;
+  margin-top: 5rem;
+}
+
+.image1,
+.image2,
+.image3,
+.image4 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  margin-top: 2rem;
+}
+
+.h2_mig {
+  font-family: marshmallow-fluff, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #eb6424;
+  font-size: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 7rem;
+}
+
 /* layout når den er stor */
 @media (min-width: 601px) {
   .h1_section {
@@ -204,7 +236,7 @@ p {
     font-weight: 400;
     font-style: normal;
     color: #eb6424;
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   p {
@@ -214,41 +246,41 @@ p {
   .column1 {
     border-right: 2px solid #efbcd5;
   }
+
+  .grid_4col_1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    margin-top: 50px;
+    margin-right: 150px;
+    margin-left: 150px;
+    margin-bottom: 100px;
+  }
+
+  .image1 {
+    grid-column: 1/2 span;
+    grid-row: 1/2 span;
+  }
+
+  .image2 {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  .image4 {
+    grid-column: 3/2 span;
+    grid-row: 2;
+  }
+
+  .portfolie_h1 {
+    font-family: marshmallow-fluff, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #eb6424;
+    text-align: center;
+    font-size: 5rem;
+    margin-top: 5rem;
+  }
 }
 
 /**************PORTFOLIO SIDER *****************/
-
-.grid_4col_1-1-1-1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 10px;
-  margin-top: 50px;
-  margin-right: 150px;
-  margin-left: 150px;
-  margin-bottom: 100px;
-}
-
-.image1 {
-  grid-column: 1/2 span;
-  grid-row: 1/2 span;
-}
-
-.image2 {
-  grid-column: 3;
-  grid-row: 1;
-}
-
-.image4 {
-  grid-column: 3/2 span;
-  grid-row: 2;
-}
-
-.portfolie_h1 {
-  font-family: marshmallow-fluff, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #eb6424;
-  text-align: center;
-  font-size: 5rem;
-  margin-top: 5rem;
-}
