ændring af class på h1 og h2

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
 }
 
 /************* BODY ***************/
-.h1_section {
+.h1_forside {
   font-family: marshmallow-fluff, sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -28,6 +28,7 @@ main {
   padding-top: 15px;
 }
 
+/*tekst i menu*/
 a {
   font-family: forma-djr-micro, sans-serif;
   font-weight: 700;
@@ -55,16 +56,6 @@ img {
   align-self: stretch;
 }
 
-.h1_mig {
-  font-family: marshmallow-fluff, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #eb6424;
-  text-align: center;
-  font-size: 5rem;
-  margin-top: 5rem;
-}
-
 .mig_picture {
   display: block;
   margin-left: auto;
@@ -89,16 +80,28 @@ p {
   font-weight: 700;
   font-style: normal;
   color: #03045e;
+  margin-bottom: 5rem;
 }
 
-.portfolie_h1 {
+.h1_portfolie {
   font-family: marshmallow-fluff, sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #eb6424;
+  color: #03045e;
   text-align: center;
   font-size: 5rem;
   margin-top: 5rem;
+}
+
+.h2_portfolie {
+  font-family: marshmallow-fluff, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #03045e;
+  font-size: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 7rem;
 }
 
 .image1,
@@ -112,20 +115,9 @@ p {
   margin-top: 2rem;
 }
 
-.h2_mig {
-  font-family: marshmallow-fluff, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #eb6424;
-  font-size: 3rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 7rem;
-}
-
 /* layout når den er stor */
 @media (min-width: 601px) {
-  .h1_section {
+  .h1_forside {
     font-family: marshmallow-fluff, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -213,7 +205,7 @@ p {
     margin-bottom: 7rem;
   }
 
-  .h1_mig {
+  .h1_portfolie {
     font-family: marshmallow-fluff, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -223,7 +215,7 @@ p {
     margin-top: 5rem;
   }
 
-  .h2_mig {
+  .h2_portfolie {
     margin-top: 10rem;
     margin-right: 10rem;
     margin-left: 11rem;
@@ -267,7 +259,7 @@ p {
     grid-row: 2;
   }
 
-  .portfolie_h1 {
+  .h1_portfolie {
     font-family: marshmallow-fluff, sans-serif;
     font-weight: 400;
     font-style: normal;
