--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ main {
   font-style: normal;
   color: #03045e;
   font-size: 2.5rem;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 /*tekst i menu*/
@@ -44,6 +44,10 @@ a {
   font-style: normal;
   color: #efbcd5;
   font-size: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  text-align: right;
 }
 
 img {
@@ -115,6 +119,9 @@ p {
 /* layout når den er stor */
 @media (min-width: 601px) {
   /************* MENU ***************/
+  .menu {
+    padding: 18px;
+  }
 
   ul {
     list-style-type: none;
@@ -131,12 +138,17 @@ p {
     float: right;
   }
 
+  .menu_højre {
+    float: right;
+  }
+
   li a {
     display: block;
     color: #03045e;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-bottom: 1.5px solid #efbcd5;
   }
 
   /* Change the link color on hover */
@@ -151,14 +163,14 @@ p {
     color: #03045e;
     font-size: 5rem;
     margin: auto;
-    height: 50vh;
+    height: 100vh;
     display: flex;
     text-align: left;
     align-items: center;
   }
 
   section {
-    height: 90vh;
+    height: 55vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -169,7 +181,10 @@ p {
     font-weight: 400;
     font-style: normal;
     color: #efbcd5;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    text-align: right;
+    margin-right: 20rem;
+    margin-top: 10rem;
   }
 
   .mig_picture {
@@ -256,7 +271,7 @@ p {
     color: #03045e;
     text-align: center;
     font-size: 5rem;
-    margin-top: 5rem;
+    margin-top: 8rem;
   }
 }
 
