--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #f6f7eb;
+  background-color: #ffffff;
 }
 
 /************* LAYOUT ***************/
@@ -102,7 +102,6 @@ p {
   font-size: 3rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 7rem;
 }
 
 .image1,
@@ -238,7 +237,7 @@ p {
   }
 
   .h2_portfolie {
-    margin-top: 10rem;
+    margin-top: 2rem;
     margin-right: 10rem;
     margin-left: 11rem;
     font-family: marshmallow-fluff, sans-serif;
@@ -250,6 +249,7 @@ p {
 
   p {
     margin-top: 2rem;
+    line-height: 2rem;
   }
 
   .column1 {
@@ -260,7 +260,6 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 10px;
-    margin-top: 50px;
     margin-right: 150px;
     margin-left: 150px;
     margin-bottom: 100px;
@@ -287,8 +286,75 @@ p {
     font-style: normal;
     color: #03045e;
     text-align: center;
-    font-size: 5rem;
+    font-size: 10rem;
     margin-top: 8rem;
+  }
+
+  .scrolling_text {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+  }
+
+  .scrolling_text_inner_mig {
+    display: inline-block;
+    font-size: 10rem;
+    font-family: marshmallow-fluff, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #03045e;
+    margin-top: 2rem;
+    animation: scroll 13s linear infinite;
+  }
+
+  .scrolling_text_inner_animation {
+    display: inline-block;
+    font-size: 10rem;
+    font-family: marshmallow-fluff, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #03045e;
+    margin-top: 2rem;
+    animation: scroll_animation 14s linear infinite;
+  }
+
+  .scrolling_text_inner_ux {
+    display: inline-block;
+    font-size: 10rem;
+    font-family: marshmallow-fluff, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #03045e;
+    margin-top: 2rem;
+    animation: scroll_ux 13s linear infinite;
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(130%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  @keyframes scroll_animation {
+    0% {
+      transform: translateX(70%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  @keyframes scroll_ux {
+    0% {
+      transform: translateX(92%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
   }
 }
 
