--- a/style.css
+++ b/style.css
@@ -252,6 +252,17 @@ p {
     font-size: 4rem;
   }
 
+  .h2_mig {
+    margin-top: 2rem;
+    margin-right: 10rem;
+    margin-left: 11rem;
+    font-family: marshmallow-fluff, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #03045e;
+    font-size: 4rem;
+  }
+
   p {
     margin-top: 2rem;
     line-height: 2rem;
