--- a/style.css
+++ b/style.css
@@ -19,14 +19,18 @@ body {
 }
 
 .h1_forside {
-  font-family: marshmallow-fluff, sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #03045e;
-  font-size: 2.5rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 16rem;
+  color: #ffffff;
+  font-size: 4.5rem;
+  margin-left: 3rem;
+  margin-right: 12rem;
+  margin-top: 19rem;
+}
+
+.outline {
+  text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
 }
 
 /*tekst i menu*/
@@ -37,7 +41,7 @@ a {
 
   font-style: normal;
   text-decoration: none;
-  color: #03045e;
+  color: #ea5657;
   font-size: 0.8rem;
 }
 
@@ -49,7 +53,7 @@ a {
   display: block;
   width: 40px;
   height: 40px;
-  background: #03045e;
+  background: #ea5657;
   color: #fff;
   font-family: forma-djr-micro, sans-serif;
   font-weight: 700;
@@ -74,15 +78,17 @@ header {
 }
 
 .h2_forside {
-  font-family: marshmallow-fluff, sans-serif;
+  font-family: mencken-std, sans-serif;
+
   font-weight: 400;
+
   font-style: normal;
   color: #efbcd5;
-  font-size: 1rem;
+  font-size: 2rem;
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 1rem;
-  text-align: right;
+  text-align: center;
 }
 
 img {
@@ -110,36 +116,42 @@ img {
 }
 
 p {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 1rem;
+
   font-family: raleway, sans-serif;
 
   font-weight: 400;
 
   font-style: normal;
-  color: #03045e;
+  color: #000000;
   margin-bottom: 5rem;
   font-size: 1rem;
+  line-height: 2rem;
 }
 
 .h1_portfolie_mig {
-  font-family: marshmallow-fluff, sans-serif;
+  font-family: mencken-std, sans-serif;
+
   font-weight: 400;
+
   font-style: normal;
-  color: #03045e;
+  color: #ea5657;
   text-align: center;
-  font-size: 2rem;
+  font-size: 4rem;
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 21rem;
 }
 
 .h1_portfolie {
-  font-family: marshmallow-fluff, sans-serif;
+  font-family: mencken-std, sans-serif;
+
   font-weight: 400;
+
   font-style: normal;
-  color: #03045e;
+  color: #ea5657;
   text-align: center;
   font-size: 2rem;
   margin-left: 1rem;
@@ -148,14 +160,32 @@ p {
 }
 
 .h2_portfolie {
-  font-family: marshmallow-fluff, sans-serif;
+  font-family: mencken-std, sans-serif;
+
   font-weight: 400;
+
   font-style: normal;
-  color: #03045e;
+  color: #ea5657;
   font-size: 1.8rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 4rem;
+}
+
+.h3_portfolie {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 1rem;
+
+  font-family: raleway, sans-serif;
+
+  font-weight: 400;
+
+  font-style: normal;
+  color: #000000;
+  margin-bottom: 5rem;
+  font-size: 1rem;
+  line-height: 2rem;
 }
 
 /* layout når den er stor */
@@ -205,7 +235,7 @@ p {
 
   li a {
     text-decoration: none;
-    color: #03045e;
+    color: #ea5657;
   }
 
   li a:hover {
@@ -233,16 +263,22 @@ p {
   }
 
   .h1_forside {
-    font-family: marshmallow-fluff, sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #03045e;
-    font-size: 5rem;
+    color: #ffffff;
+    font-size: 21rem;
     margin: auto;
     height: 100vh;
     display: flex;
     text-align: left;
     align-items: center;
+    letter-spacing: -40px;
+    margin-top: 4rem;
+  }
+
+  .outline {
+    text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
   }
 
   section {
@@ -253,14 +289,17 @@ p {
   }
 
   .h2_forside {
-    font-family: marshmallow-fluff, sans-serif;
+    font-family: mencken-std, sans-serif;
+
     font-weight: 400;
+
     font-style: normal;
     color: #efbcd5;
-    font-size: 1.5rem;
+
+    font-size: 3.5rem;
     text-align: right;
-    margin-right: 20rem;
-    margin-top: 10rem;
+    margin-right: 37rem;
+    margin-top: -6rem;
   }
 
   .mig_picture {
@@ -289,10 +328,12 @@ p {
     margin-top: 6rem;
     margin-right: 10rem;
     margin-left: 11rem;
-    font-family: marshmallow-fluff, sans-serif;
+    font-family: mencken-std, sans-serif;
+
     font-weight: 400;
+
     font-style: normal;
-    color: #03045e;
+    color: #ea5657;
     font-size: 3rem;
   }
 
@@ -341,10 +382,12 @@ p {
   }
 
   .h1_portfolie {
-    font-family: marshmallow-fluff, sans-serif;
+    font-family: mencken-std, sans-serif;
+
     font-weight: 400;
+
     font-style: normal;
-    color: #03045e;
+    color: #ea5657;
     text-align: center;
     font-size: 7rem;
     margin-top: 20rem;
@@ -353,25 +396,30 @@ p {
   }
 
   .h1_portfolie_mig {
-    font-family: marshmallow-fluff, sans-serif;
+    font-family: mencken-std, sans-serif;
+
     font-weight: 400;
+
     font-style: normal;
-    color: #03045e;
+    color: #ea5657;
     text-align: center;
     font-size: 7rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-top: 21rem;
+    margin-top: 36rem;
   }
 
   .h3_portfolie {
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1rem;
+
     font-family: raleway, sans-serif;
+
     font-weight: 400;
+
     font-style: normal;
-    color: #03045e;
+    color: #000000;
     margin-bottom: 5rem;
     font-size: 1.2rem;
     margin-right: 20rem;
