--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main {
 
 /************* BODY ***************/
 body {
-  background-color: #ffffff;
+  background-color: #f6f6f6;
   /*background: radial-gradient(circle, #ffffff, #faf0f5, #ffffff);*/
 }
 
@@ -22,7 +22,7 @@ body {
   font-family: sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #ffffff;
+  color: #f6f6f6;
   font-size: 4.5rem;
   margin-left: 3rem;
   margin-right: 12rem;
@@ -54,7 +54,7 @@ a {
   width: 40px;
   height: 40px;
   background: #ea5657;
-  color: #fff;
+  color: #f6f6f6;
   font-family: forma-djr-micro, sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -72,7 +72,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: #F6F6F6f;
   overflow: hidden;
   z-index: 1;
 }
@@ -224,7 +224,7 @@ p {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #fff;
+    background-color: #f6f6f6;
     overflow: hidden;
     z-index: 1;
   }
@@ -266,7 +266,7 @@ p {
     font-family: sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #ffffff;
+    color: #f6f6f6;
     font-size: 21rem;
     margin: auto;
     height: 100vh;
