--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #F6F6F6f;
+  background-color: #f6f6f6;
   overflow: hidden;
   z-index: 1;
 }
