--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ p {
   .h2_portfolie {
     margin-top: 6rem;
     margin-right: 10rem;
-    margin-left: 11rem;
+    margin-left: 12rem;
     font-family: mencken-std, sans-serif;
 
     font-weight: 400;
@@ -436,5 +436,53 @@ p {
     opacity: 1;
     transform: translateY(0);
     transition: transform 0.1s ease-in-out, opacity 0.3s ease-in-out;
+  }
+
+  .vertical-text {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-family: raleway, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    font-size: 1.5rem;
+    margin-top: -4rem;
+    margin-left: 0.5rem;
+    color: #ea5657;
+  }
+  .vertical-text2 {
+    writing-mode: vertical-rl;
+    transform: rotate(360deg);
+    font-family: raleway, sans-serif;
+    position: absolute;
+    right: 0;
+
+    font-weight: 400;
+
+    font-style: normal;
+    font-size: 1.5rem;
+    margin-top: -4rem;
+    margin-right: 0.5rem;
+    color: #ea5657;
+  }
+
+  .knap {
+    margin-left: 2rem;
+    background-color: #ea5657;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    border-radius: 4px;
+  }
+
+  .knap:hover {
+    background-color: #efbcd5;
   }
 }
