--- a/style.css
+++ b/style.css
@@ -25,12 +25,39 @@ body {
   color: #f6f6f6;
   font-size: 4.5rem;
   margin-left: 3rem;
-  margin-right: 12rem;
+  margin-right: 3rem;
   margin-top: 19rem;
+  text-align: center;
 }
 
 .outline {
   text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
+}
+
+.vertical-text {
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-family: raleway, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.7rem;
+  margin-top: -1.1rem;
+  margin-left: 0.5rem;
+  color: #ea5657;
+}
+
+.vertical-text2 {
+  writing-mode: vertical-rl;
+  transform: rotate(360deg);
+  font-family: raleway, sans-serif;
+  position: absolute;
+  right: 0;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.7rem;
+  margin-top: -1.6rem;
+  margin-right: 0.5rem;
+  color: #ea5657;
 }
 
 /*tekst i menu*/
@@ -47,6 +74,17 @@ a {
 
 .menu {
   display: none;
+}
+
+.img_logo {
+  width: 15%;
+}
+
+section {
+  height: 55vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu_button {
@@ -79,16 +117,34 @@ header {
 
 .h2_forside {
   font-family: mencken-std, sans-serif;
-
   font-weight: 400;
-
   font-style: normal;
   color: #efbcd5;
-  font-size: 2rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 1rem;
+  font-size: 0.5rem;
+  margin-left: 0rem;
+  margin-right: 0rem;
+  margin-top: -7rem;
   text-align: center;
+}
+
+.knap {
+  margin-left: 3rem;
+  background-color: #ea5657;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: raleway, sans-serif;
+  font-weight: 400;
+  border-radius: 4px;
+  margin-bottom: 6rem;
+}
+
+.knap:hover {
+  background-color: #efbcd5;
 }
 
 img {
@@ -119,30 +175,25 @@ p {
   margin-left: 2rem;
   margin-right: 2rem;
   margin-top: 1rem;
-
   font-family: raleway, sans-serif;
-
   font-weight: 400;
-
   font-style: normal;
   color: #000000;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   font-size: 1rem;
   line-height: 2rem;
 }
 
 .h1_portfolie_mig {
   font-family: mencken-std, sans-serif;
-
   font-weight: 400;
-
   font-style: normal;
   color: #ea5657;
   text-align: center;
   font-size: 4rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 21rem;
+  margin-top: 31rem;
 }
 
 .h1_portfolie {
@@ -262,6 +313,10 @@ p {
     padding-left: 50px;
   }
 
+  .img_logo {
+    width: 80%;
+  }
+
   .h1_forside {
     font-family: sans-serif;
     font-weight: 400;
@@ -337,6 +392,20 @@ p {
     font-size: 3rem;
   }
 
+  .h2_portfolie_info {
+    margin-top: 6rem;
+    margin-right: 10rem;
+    margin-left: 12rem;
+    margin-bottom: 2rem;
+    font-family: mencken-std, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    color: #ea5657;
+    font-size: 3rem;
+  }
+
   .h2_mig {
     margin-top: 2rem;
     margin-right: 10rem;
@@ -393,6 +462,26 @@ p {
     margin-top: 20rem;
     margin-right: 3rem;
     margin-left: 3rem;
+  }
+
+  .h1_portfolie_info {
+    font-family: mencken-std, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    color: #ea5657;
+    text-align: center;
+    font-size: 7rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
+    margin-top: 7rem;
+  }
+
+  .img_website {
+    display: grid;
+    width: 50%;
+    align-items: center;
   }
 
   .h1_portfolie_mig {
