--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ p {
     color: #ea5657;
     text-align: center;
     font-size: 7rem;
-    margin-top: 20rem;
+    margin-top: 14rem;
     margin-right: 3rem;
     margin-left: 3rem;
   }
@@ -508,6 +508,7 @@ a {
   display: none;
 }
 
+/* mobil */
 @media (max-width: 800px) {
   .hamburger {
     display: block;
@@ -519,7 +520,7 @@ a {
     font-weight: 400;
     font-style: normal;
     color: #ea5657;
-    font-size: 2rem;
+    font-size: 1rem;
   }
 
   .bar1 {
