--- a/style.css
+++ b/style.css
@@ -16,502 +16,56 @@ main {
 /************* BODY ***************/
 body {
   background-color: #f6f6f6;
-  /*background: radial-gradient(circle, #ffffff, #faf0f5, #ffffff);*/
 }
 
-.h1_forside {
-  font-family: sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #f6f6f6;
-  font-size: 4.5rem;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  margin-top: 19rem;
-  text-align: center;
-}
-
-.outline {
-  text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
-}
-
-.vertical-text {
-  writing-mode: vertical-rl;
-  transform: rotate(180deg);
-  font-family: raleway, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 0.7rem;
-  margin-top: -1.1rem;
-  margin-left: 0.5rem;
-  color: #ea5657;
-}
-
-.vertical-text2 {
-  writing-mode: vertical-rl;
-  transform: rotate(360deg);
-  font-family: raleway, sans-serif;
-  position: absolute;
-  right: 0;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 0.7rem;
-  margin-top: -1.6rem;
-  margin-right: 0.5rem;
-  color: #ea5657;
-}
-
-section {
-  height: 55vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.h2_forside {
-  font-family: mencken-std, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #efbcd5;
-  font-size: 0.5rem;
-  margin-left: 0rem;
-  margin-right: 0rem;
-  margin-top: -7rem;
-  text-align: center;
-}
-
-.knap {
-  margin-left: 3rem;
-  background-color: #ea5657;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  font-family: raleway, sans-serif;
-  font-weight: 400;
-  border-radius: 4px;
-  margin-bottom: 6rem;
-}
-
-.knap:hover {
-  background-color: #efbcd5;
-}
-
-img {
-  width: 100%;
-  display: block;
-  object-fit: cover;
-  align-self: stretch;
-  margin-right: 1rem;
-}
-
-.mig_picture {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-  margin-top: 2rem;
-}
-
-.portfolie_img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-  margin-top: 2rem;
-}
-
-p {
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 1rem;
-  font-family: raleway, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #000000;
-  margin-bottom: 2rem;
-  font-size: 1rem;
-  line-height: 2rem;
-}
-
-.h1_portfolie_mig {
-  font-family: mencken-std, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #ea5657;
-  text-align: center;
-  font-size: 4rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 31rem;
-}
-
-.h1_portfolie {
-  font-family: mencken-std, sans-serif;
-
-  font-weight: 400;
-
-  font-style: normal;
-  color: #ea5657;
-  text-align: center;
-  font-size: 2rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 10rem;
-}
-
-.h2_portfolie {
-  font-family: mencken-std, sans-serif;
-
-  font-weight: 400;
-
-  font-style: normal;
-  color: #ea5657;
-  font-size: 1.8rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 4rem;
-}
-
-.h3_portfolie {
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 1rem;
-
-  font-family: raleway, sans-serif;
-
-  font-weight: 400;
-
-  font-style: normal;
-  color: #000000;
-  margin-bottom: 5rem;
-  font-size: 1rem;
-  line-height: 2rem;
-}
-
-/* layout når den er stor */
-@media (min-width: 601px) {
-  .h1_forside {
-    font-family: sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: #f6f6f6;
-    font-size: 21rem;
-    margin: auto;
-    height: 100vh;
-    display: flex;
-    text-align: left;
-    align-items: center;
-    letter-spacing: -40px;
-    margin-top: 4rem;
+/* mobil menu */
+@media screen and (max-width: 600px) {
+  header {
+    background-color: #f6f6f6;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
   }
 
-  .outline {
-    text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
-  }
-
-  section {
-    height: 55vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .h2_forside {
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #efbcd5;
-
-    font-size: 3.5rem;
-    text-align: right;
-    margin-right: 37rem;
-    margin-top: -6rem;
-  }
-
-  .mig_picture {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    margin-top: 2rem;
-  }
-
-  .portfolie_img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .two_columns {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-right: 10rem;
-    margin-left: 10rem;
-    margin-bottom: 7rem;
-  }
-
-  .h2_portfolie {
-    margin-top: 6rem;
-    margin-right: 10rem;
-    margin-left: 12rem;
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #ea5657;
-    font-size: 3rem;
-  }
-
-  .h2_portfolie_info {
-    margin-top: 6rem;
-    margin-right: 10rem;
-    margin-left: 12rem;
-    margin-bottom: 2rem;
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #ea5657;
-    font-size: 3rem;
-  }
-
-  .h2_mig {
-    margin-top: 2rem;
-    margin-right: 10rem;
-    margin-left: 11rem;
-    font-family: forma-djr-display, sans-serif;
-    font-weight: 200;
-    font-style: italic;
-    color: #03045e;
-    font-size: 3rem;
-  }
-
-  p {
-    margin-top: 2rem;
-    line-height: 2rem;
-  }
-
-  .column1 {
-    border-right: 2px solid #efbcd5;
-  }
-
-  .grid_4col_1-1-1-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-bottom: 15px;
-  }
-
-  .image1 {
-    grid-column: 1/2 span;
-    grid-row: 1/2 span;
-  }
-
-  .image2 {
-    grid-column: 3;
-    grid-row: 1;
-  }
-
-  .image4 {
-    grid-column: 3/2 span;
-    grid-row: 2;
-  }
-
-  .h1_portfolie {
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #ea5657;
-    text-align: center;
-    font-size: 7rem;
-    margin-top: 14rem;
-    margin-right: 3rem;
-    margin-left: 3rem;
-  }
-
-  .h1_portfolie_info {
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #ea5657;
-    text-align: center;
-    font-size: 7rem;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-top: 7rem;
-  }
-
-  .img_website {
-    display: grid;
-    width: 50%;
-    align-items: center;
-  }
-
-  .h1_portfolie_mig {
-    font-family: mencken-std, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #ea5657;
-    text-align: center;
-    font-size: 7rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-top: 36rem;
-  }
-
-  .h3_portfolie {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
-
-    font-family: raleway, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    color: #000000;
-    margin-bottom: 5rem;
-    font-size: 1.2rem;
-    margin-right: 20rem;
-    margin-left: 20rem;
-    line-height: 2rem;
-  }
-
-  .reveal {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-
-  .reveal.revealed {
-    opacity: 1;
-    transform: translateY(0);
-    transition: transform 0.1s ease-in-out, opacity 0.3s ease-in-out;
-  }
-
-  .vertical-text {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    font-family: raleway, sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
-    font-size: 1.5rem;
-    margin-top: -4rem;
-    margin-left: 0.5rem;
-    color: #ea5657;
-  }
-  .vertical-text2 {
-    writing-mode: vertical-rl;
-    transform: rotate(360deg);
-    font-family: raleway, sans-serif;
-    position: absolute;
-    right: 0;
-
-    font-weight: 400;
-
-    font-style: normal;
-    font-size: 1.5rem;
-    margin-top: -4rem;
-    margin-right: 0.5rem;
-    color: #ea5657;
-  }
-
-  .knap {
-    margin-left: 2rem;
-    background-color: #ea5657;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
+  a {
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    font-family: raleway, sans-serif;
-    font-weight: 400;
-    border-radius: 4px;
+    color: #ea5657;
   }
 
-  .knap:hover {
-    background-color: #efbcd5;
-  }
-}
-
-header {
-  background-color: #f6f6f6;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 9999;
-}
-
-li {
-  list-style: none;
-  font-family: raleway, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 0.9rem;
-}
-
-a {
-  color: #ea5657;
-  text-decoration: none;
-}
-
-.navbar {
-  min-height: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 24px;
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
-  height: 100%;
-}
-
-.nav-branding {
-  font-family: raleway, sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-}
-
-.nav-link {
-  transition: 0.7s;
-}
-
-.nav-link:hover {
-  color: #efbcd5;
-}
-
-.hamburger {
-  display: none;
-}
-
-/* mobil */
-@media (max-width: 800px) {
   .hamburger {
     display: block;
+  }
+
+  .navbar {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+  }
+
+  .nav-branding {
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: #ea5657;
+  }
+
+  .nav-menu {
+    position: fixed;
+    transform: translateX(0);
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-menu.active {
+    left: 0;
   }
 
   li {
@@ -521,6 +75,18 @@ a {
     font-style: normal;
     color: #ea5657;
     font-size: 1rem;
+  }
+
+  .nav-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    height: 100%;
+  }
+
+  .nav-item {
+    margin: 16px;
   }
 
   .bar1 {
@@ -563,23 +129,396 @@ a {
     transform: translateY(-8px) rotate(-45deg);
   }
 
-  .nav-menu {
-    position: fixed;
-    transform: translateX();
-    left: -100%;
-    top: 70px;
-    gap: 0;
-    flex-direction: column;
-    background-color: #f6f6f6;
-    width: 100%;
-    text-align: center;
-  }
-
-  .nav-item {
-    margin: 16px;
-  }
-
   .nav-menu.active {
     left: 0;
+  }
+}
+
+.h1_forside {
+  font-family: sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f6f6f6;
+  font-size: 4.5rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 19rem;
+  text-align: center;
+}
+
+.outline {
+  text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
+}
+
+.vertical-text {
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-family: raleway, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.7rem;
+  margin-top: -2.1rem;
+  margin-left: 0.5rem;
+  color: #ea5657;
+}
+
+.vertical-text2 {
+  writing-mode: vertical-rl;
+  transform: rotate(360deg);
+  font-family: raleway, sans-serif;
+  position: absolute;
+  right: 0;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.7rem;
+  margin-top: -1.6rem;
+  margin-right: 0.5rem;
+  color: #ea5657;
+}
+
+.h2_forside {
+  font-family: rizado-script, cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #efbcd5;
+  font-size: 1.8rem;
+  margin-top: -8.7rem;
+  text-align: center;
+}
+
+.knap {
+  margin-left: 3rem;
+  background-color: #ea5657;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: raleway, sans-serif;
+  font-weight: 400;
+  border-radius: 4px;
+  margin-bottom: 6rem;
+}
+
+.knap:hover {
+  background-color: #efbcd5;
+}
+
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  align-self: stretch;
+  margin-right: 1rem;
+}
+
+.portfolie_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  margin-top: 2rem;
+}
+
+p {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 1rem;
+  font-family: raleway, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  line-height: 2rem;
+}
+
+.h1_portfolie_mig {
+  font-family: mencken-std, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #ea5657;
+  text-align: center;
+  font-size: 4rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 31rem;
+}
+
+.h1_portfolie {
+  font-family: mencken-std, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #ea5657;
+  text-align: center;
+  font-size: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 10rem;
+}
+
+.h3_portfolie {
+  font-family: mencken-std, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #ea5657;
+  font-size: 1.8rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 4rem;
+}
+
+.h2_portfolie {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 1rem;
+
+  font-family: raleway, sans-serif;
+
+  font-weight: 400;
+
+  font-style: normal;
+  color: #000000;
+  margin-bottom: 5rem;
+  font-size: 1rem;
+  line-height: 2rem;
+}
+
+/* desktop */
+@media (min-width: 601px) {
+  .nav-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    height: 100%;
+  }
+
+  .navbar {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+  }
+
+  header {
+    background-color: #f6f6f6;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+  }
+
+  .nav-branding {
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+  }
+
+  li {
+    list-style: none;
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.9rem;
+    color: #ea5657;
+  }
+
+  a {
+    color: #ea5657;
+    text-decoration: none;
+  }
+
+  .nav-link {
+    transition: 0.7s;
+  }
+
+  .nav-link:hover {
+    color: #efbcd5;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .h1_forside {
+    font-family: sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #f6f6f6;
+    font-size: 21rem;
+    margin-top: 5rem;
+    text-align: center;
+    letter-spacing: -40px;
+  }
+
+  .outline {
+    text-shadow: -2px 0 #ea5657, 0 2px #ea5657, 2px 0 #ea5657, 0 -2px #ea5657;
+  }
+
+  .h2_forside {
+    font-family: rizado-script, cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #efbcd5;
+    font-size: 8.5rem;
+    text-align: center;
+    margin-top: -41rem;
+  }
+
+  .h1_portfolie_mig {
+    font-family: mencken-std, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ea5657;
+    text-align: center;
+    font-size: 7rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 40rem;
+  }
+
+  .portfolie_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .two_columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-right: 10rem;
+    margin-left: 10rem;
+    margin-bottom: 7rem;
+  }
+
+  .h3_portfolie {
+    margin-top: 6rem;
+    margin-right: 10rem;
+    margin-left: 12rem;
+    font-family: mencken-std, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    color: #ea5657;
+    font-size: 3rem;
+  }
+
+  p {
+    margin-top: 2rem;
+    line-height: 2rem;
+  }
+
+  .column1 {
+    border-right: 2px solid #efbcd5;
+  }
+
+  .h1_portfolie {
+    font-family: mencken-std, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ea5657;
+    text-align: center;
+    font-size: 7rem;
+    margin-top: 14rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
+  }
+
+  .h1_portfolie_info {
+    font-family: mencken-std, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ea5657;
+    text-align: center;
+    font-size: 7rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
+    margin-top: 7rem;
+  }
+
+  .img_website {
+    display: grid;
+    width: 50%;
+    align-items: center;
+  }
+
+  .h2_portfolie {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+
+    font-family: raleway, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    color: #000000;
+    margin-bottom: 5rem;
+    font-size: 1.2rem;
+    margin-right: 20rem;
+    margin-left: 20rem;
+    line-height: 2rem;
+  }
+
+  .reveal {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  .reveal.revealed {
+    opacity: 1;
+    transform: translateY(0);
+    transition: transform 0.1s ease-in-out, opacity 0.3s ease-in-out;
+  }
+
+  .vertical-text {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-family: raleway, sans-serif;
+
+    font-weight: 400;
+
+    font-style: normal;
+    font-size: 1.5rem;
+    margin-top: -10rem;
+    margin-left: 0.5rem;
+    color: #ea5657;
+  }
+  .vertical-text2 {
+    writing-mode: vertical-rl;
+    transform: rotate(360deg);
+    font-family: raleway, sans-serif;
+    position: absolute;
+    right: 0;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5rem;
+    margin-top: -3rem;
+    margin-right: 0.5rem;
+    color: #ea5657;
+  }
+
+  .knap {
+    margin-left: 2rem;
+    background-color: #ea5657;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    border-radius: 4px;
+  }
+
+  .knap:hover {
+    background-color: #efbcd5;
   }
 }
