--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ main {
 
 /************* BODY ***************/
 body {
-  background-color: #f6f6f6;
+  background-color: #ebe9e3;
 }
 
 /* mobil menu */
 @media screen and (max-width: 600px) {
   header {
-    background-color: #f6f6f6;
+    background-color: #ebe9e3;
     position: fixed;
     width: 100%;
     top: 0;
@@ -59,7 +59,7 @@ body {
     top: 70px;
     gap: 0;
     flex-direction: column;
-    background-color: #f6f6f6;
+    background-color: #ebe9e3;
     width: 100%;
     text-align: center;
   }
@@ -138,7 +138,7 @@ body {
   font-family: sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #f6f6f6;
+  color: #ebe9e3;
   font-size: 4.5rem;
   margin-left: 3rem;
   margin-right: 3rem;
@@ -215,6 +215,14 @@ img {
 }
 
 .portfolie_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  margin-top: 2rem;
+}
+
+.portfolie_eksamen_img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -305,7 +313,7 @@ p {
   }
 
   header {
-    background-color: #f6f6f6;
+    background-color: #ebe9e3;
     position: fixed;
     width: 100%;
     top: 0;
@@ -348,7 +356,7 @@ p {
     font-family: sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #f6f6f6;
+    color: #ebe9e3;
     font-size: 21rem;
     margin-top: 5rem;
     text-align: center;
@@ -385,6 +393,13 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .portfolie_eksamen_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5rem;
   }
 
   .two_columns {
