--- a/style.css
+++ b/style.css
@@ -536,4 +536,16 @@ p {
   .knap:hover {
     background-color: #efbcd5;
   }
+
+  footer {
+    font-family: raleway, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.9rem;
+    color: #ea5657;
+    margin-left: 1.5rem;
+    margin-bottom: 5rem;
+    margin-right: 5rem;
+    margin-top: 5rem;
+  }
 }
